[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/player/on_ground.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/jump.gd" type="Script" id=4]
[ext_resource path="res://scenes/player/state_machine.gd" type="Script" id=5]
[ext_resource path="res://scenes/player/base_state.gd" type="Script" id=6]
[ext_resource path="res://scenes/player/interaction_box.gd" type="Script" id=7]
[ext_resource path="res://scenes/powerup_select/powerup_select.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/player/nag_idle_sheet.png" type="Texture" id=9]
[ext_resource path="res://scenes/player/in_air.gd" type="Script" id=10]
[ext_resource path="res://scenes/player/weapon.gd" type="Script" id=11]
[ext_resource path="res://scenes/player/reload_anim.gd" type="Script" id=12]
[ext_resource path="res://scenes/player/hit_box.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/player/player_animation.gd" type="Script" id=14]
[ext_resource path="res://assets/player/nag_run_sheet.png" type="Texture" id=15]
[ext_resource path="res://scenes/player/dash.gd" type="Script" id=16]
[ext_resource path="res://scenes/player/powerup_manager.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 19, 26.5 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 30, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 60, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 90, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 15 )
region = Rect2( 30, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 15 )
region = Rect2( 60, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 15 )
region = Rect2( 90, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 15 )
region = Rect2( 120, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 15 )
region = Rect2( 150, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 15 )
region = Rect2( 180, 0, 30, 42 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 15 )
region = Rect2( 210, 0, 30, 42 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11.3636, 20 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 13 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 7 )

[node name="InteractionBox" type="Area2D" parent="."]
visible = false
collision_layer = 6
collision_mask = 6
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
scale = Vector2( 5.08, 6.08 )
shape = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="BaseState" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="OnGround" type="Node" parent="StateMachine/BaseState"]
script = ExtResource( 1 )

[node name="Jump" type="Node" parent="StateMachine/BaseState"]
script = ExtResource( 4 )

[node name="InAir" type="Node" parent="StateMachine/BaseState"]
script = ExtResource( 10 )

[node name="Dash" type="Node" parent="StateMachine/BaseState"]
script = ExtResource( 16 )

[node name="DashTimer" type="Timer" parent="StateMachine/BaseState/Dash"]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 0 )
frames = SubResource( 4 )
animation = "run"
script = ExtResource( 14 )

[node name="VelocityDirectionDebugArrow" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 0.5 )
scale = Vector2( 1, 0.55 )
points = PoolVector2Array( 0, 0, 29, 0 )
default_color = Color( 0.733333, 1, 0.4, 1 )

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
scale = Vector2( 1.1, 1 )
shape = SubResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -100 )
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
smoothing_speed = 15.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="PowerupSelect" parent="UI" instance=ExtResource( 8 )]
pause_mode = 2
visible = false

[node name="ReloadIndicator" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 12 )

[node name="LeftBar" type="Polygon2D" parent="ReloadIndicator"]
position = Vector2( -40, -65 )
color = Color( 0.784314, 0.784314, 0.784314, 1 )
polygon = PoolVector2Array( 0, 0, 6, 0, 6, 10, 0, 10 )

[node name="RightBar" type="Polygon2D" parent="ReloadIndicator"]
position = Vector2( 34, -65 )
color = Color( 0.784314, 0.784314, 0.784314, 1 )
polygon = PoolVector2Array( 0, 0, 6, 0, 6, 10, 0, 10 )

[node name="HorizontalBar" type="Polygon2D" parent="ReloadIndicator"]
position = Vector2( -32, -62 )
color = Color( 0.784314, 0.784314, 0.784314, 1 )
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 4, 0, 4 )

[node name="ProgressIndicator" type="Polygon2D" parent="ReloadIndicator"]
position = Vector2( -32, -64 )
scale = Vector2( 1, 1.16667 )
color = Color( 0.745098, 0.745098, 0.745098, 1 )
polygon = PoolVector2Array( 0, 0, 4, 0, 4, 6.85714, 0, 6.85714 )

[node name="ProgressTween" type="Tween" parent="ReloadIndicator"]

[node name="PowerupManager" type="Node" parent="."]
script = ExtResource( 17 )

[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="InteractionBox" to="InteractionBox" method="_on_InteractionBox_area_entered"]
[connection signal="area_exited" from="InteractionBox" to="InteractionBox" method="_on_InteractionBox_area_exited"]
[connection signal="dash_ended" from="StateMachine/BaseState/Dash" to="." method="_on_Dash_dash_ended"]
[connection signal="timeout" from="StateMachine/BaseState/Dash/DashTimer" to="StateMachine/BaseState/Dash" method="_on_DashTimer_timeout"]
[connection signal="tween_completed" from="ReloadIndicator/ProgressTween" to="ReloadIndicator" method="_on_ProgressTween_tween_completed"]
[connection signal="tween_started" from="ReloadIndicator/ProgressTween" to="ReloadIndicator" method="_on_ProgressTween_tween_started"]

[editable path="HitBox"]
